# libgcds

./: CMakeLists.txt  README.md  node.c  node.h
LinkedList/: README.md  linked_list-test.c  linked_list.c  linked_list.h  test.c
Queue/: README.md  queue-test.c  queue.c  queue.h
Stack/: README.md  stack-test.c  stack.c  stack.h
Vector/: README.md  vector-test.c  vector.c  vector.h
docs/: CircularLinkedList.md  LinkedList.md  Queue.md  Stack.md  Vector.md
examples/CircularLinkedList/: circular_linked_list_int.c  circular_linked_list_struct.c
examples/LinkedList/: linked_list_int  linked_list_int.c  linked_list_struct  linked_list_struct.c
examples/Queue/: queue_int  queue_int.c  queue_struct  queue_struct.c
examples/Stack/: stack_int  stack_int.c  stack_struct  stack_struct.c
examples/Vector/: vector_int  vector_int.c  vector_struct  vector_struct.c
include/LinkedList/: linked_list.h
include/Queue/: queue.h
include/Stack/: stack.h
include/Vector/: vector.h
src/CircularLinkedList/: circular_linked_list.c
src/LinkedList/: linked_list.c
src/Queue/: queue.c
src/Stack/: stack.c
src/Vector/: vector.c
tests/: README.md  circular_linked_list-test.c  linked_list-test.c  makefile  queue-test.c  stack-test.c  vector-test.c
vector/: README.md  vector-test.c  vector.c  vector.h
